# hexahedra

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  INSTALL  LICENSE.md  README.md  build-msvc.py  build-win32.sh  changelog
cmake/Modules/: FindCryptoPP.cmake  FindENet.cmake  FindES.cmake  FindHexaNoise.cmake  FindLevelDB.cmake  FindLuaJIT.cmake  FindLuabind.cmake  FindOpenCL.cmake  FindRhea.cmake  FindSFML.cmake  FindSqlite3.cmake  NSIS.template.in
cmake/leveldb/: CMakeLists.txt
data/: bsc5  dbsetup-client.sql  dbsetup.sql
data/games/blackboard/: actions.lua  info.json  jump.lua  (+1 more)
data/shaders/: anim_gl2.fs  anim_gl2.vs  model_gl2.fs  model_gl2.vs  occ_qry.fs  occ_qry.vs  terrain_gl2.fs  terrain_gl2.vs  terrain_gl3.fs  terrain_gl3.vs
debian/: changelog  control  copyright  hexahedra-install  hexahedra-server-install  hexahedra-server.manpages  hexahedra.manpages  hexahedra.menu  watch
doc/: project_description.txt
doc/doxygen/: definitions.dox  mainpage.md
doc/man/: hexahedra-server.6  hexahedra.6
hexa/: CMakeLists.txt  aabb.hpp  algorithm.hpp  area_data.hpp  array.hpp  base58.cpp  base58.hpp  basic_types.cpp  basic_types.hpp  block_types.cpp  block_types.hpp  chunk.hpp  chunk_base.hpp  collision.cpp  collision.hpp  color.hpp  compiler_fix.hpp  compression.hpp  concurrent_queue.hpp  config.hpp.in  container_uptr.hpp  crypto.cpp  crypto.hpp  db.cpp  db.hpp  distance_sorted_map.hpp  drop_privileges.cpp  drop_privileges.hpp  entity_system.cpp  entity_system.hpp  entity_system_physics.cpp  entity_system_physics.hpp  exact_position.hpp  flat_map.hpp  frustum.cpp  frustum.hpp  geometric.hpp  height_chunk.hpp  hotbar_slot.hpp  http_cache.cpp  (+64 more)
hexa/client/: CMakeLists.txt  button.cpp  button.hpp  camera.cpp  camera.hpp  chunk_cache.cpp  chunk_cache.hpp  clock.cpp  clock.hpp  edge_buffer.hpp  event.hpp  game.cpp  game.hpp  game_state.hpp  hud.cpp  hud.hpp  iqm.hpp  iqm_loader.cpp  iqm_loader.hpp  keycodes.hpp  loading_screen.cpp  loading_screen.hpp  main.cpp  main_game.cpp  main_game.hpp  main_menu.cpp  main_menu.hpp  model.hpp  model_opengl.cpp  model_opengl.hpp  occlusion_manager.hpp  occlusion_query.cpp  occlusion_query.hpp  opengl.cpp  opengl.hpp  opengl_vertex.hpp  player.cpp  player.hpp  player_info.cpp  player_info.hpp  (+33 more)
hexa/client/gui/: area.hpp  button.hpp  canvas.hpp  constraints.hpp  context.cpp  context.hpp  font_i.hpp  frame.hpp  layout.hpp  mouse_event_handler.cpp  mouse_event_handler.hpp  rectangle.hpp  render_queue.hpp  renderer_i.hpp  sfml2.cpp  sfml2.hpp  sfml_canvas.cpp  sfml_canvas.hpp  text_label.hpp  texture_i.hpp  theme.hpp  types.hpp  variable.hpp  viewport.hpp  widget.cpp  widget.hpp
hexa/physics/: euler_integrater.hpp  integrater.hpp  rk4.hpp  simulation.hpp  state.hpp
hexa/server/: CMakeLists.txt  ambient_occlusion_lightmap.cpp  ambient_occlusion_lightmap.hpp  anvil.cpp  anvil.hpp  area_generator_i.hpp  binvox_world_generator.cpp  binvox_world_generator.hpp  biome_generator.cpp  biome_generator.hpp  clock.cpp  clock.hpp  cmake_install.cmake  connection.hpp  console.hpp  extract_surface.cpp  extract_surface.hpp  flatworld_generator.cpp  flatworld_generator.hpp  generic_area_generator.hpp  globals.cpp  globals.hpp  gridworld_generator.cpp  gridworld_generator.hpp  heightmap_generator.cpp  heightmap_generator.hpp  hndl.cpp  hndl.hpp  init_terrain_generators.cpp  init_terrain_generators.hpp  lamp_lightmap.cpp  lamp_lightmap.hpp  lightmap_generator_i.hpp  lua.cpp  lua.hpp  lua_heightmap_generator.cpp  lua_heightmap_generator.hpp  main.cpp  network.cpp  network.hpp  (+51 more)
hexa/server/area/: area_generator.cpp  area_generator.hpp  area_generator_i.hpp  fixed_value_area_generator.hpp  lua_heightmap_generator.cpp  lua_heightmap_generator.hpp
hexa/server/lightmap/: ambient_occlusion_lightmap.cpp  ambient_occlusion_lightmap.hpp  lamp_lightmap.cpp  lamp_lightmap.hpp  lightmap_generator_i.hpp  radiosity_lightmap.cpp  radiosity_lightmap.hpp  sun_lightmap.cpp  sun_lightmap.hpp  test_lightmap.cpp  test_lightmap.hpp  uniform_lightmap.cpp  uniform_lightmap.hpp
hexa/server/terrain/: cave_generator.cpp  cave_generator.hpp  flatworld_generator.cpp  flatworld_generator.hpp  height_estimator.cpp  height_estimator.hpp  heightmap_terrain_generator.cpp  heightmap_terrain_generator.hpp  object_placer.cpp  object_placer.hpp  soil_generator.cpp  soil_generator.hpp  terrain_generator_i.hpp  testpattern_generator.cpp  testpattern_generator.hpp  transmute.cpp  transmute.hpp
install/: control  hexahedra-client.rc  hexahedra-client.rc.in  hexahedra-server.rc  hexahedra-server.rc.in  hexahedra.desktop  hexahedra.rc  hexahedra.xpm  nsis-header.xcf  nsis-welcome.xcf  opencl.cl
libs/CL/: cl.hpp
libs/clew/: README.md  clew.c
libs/luabind/: adopt_policy.hpp  class.cpp  get_pointer.hpp  object.hpp  operator.hpp  scope.cpp  scope.hpp  version.hpp
libs/noisepp/: LICENSE.TXT  Noise.h  NoiseAbsolute.h  NoiseAddition.h  NoiseBillow.h  NoiseBlend.h  NoiseCheckerboard.h  NoiseClamp.h  NoiseConfig.h  NoiseConstant.h  NoiseCurve.h  NoiseExceptions.h  NoiseExponent.h  NoiseGenerator.h  NoiseInvert.h  NoiseMath.h  NoiseMaximum.h  NoiseModule.h  NoiseMultiply.h  NoisePerlin.h  NoisePipeline.h  NoisePipelineJobs.h  NoisePower.h  NoisePrerequisites.h  NoiseRidgedMulti.h  NoiseScaleBias.h  NoiseScalePoint.h  NoiseSelect.h  NoiseTerrace.h  NoiseThreadedPipeline.h  NoiseTranslatePoint.h  NoiseTurbulence.h  NoiseVectorTable.h  NoiseVoronoi.h
libs/tb/: CMakeLists.txt  tb_color.cpp  tb_config.h  tb_core.cpp  tb_core.h  tb_debug.cpp  tb_editfield.cpp  tb_image_loader_stb.cpp  tb_language.h  tb_layout.cpp  tb_layout.h  tb_node_ref_tree.cpp  tb_node_tree.h  tb_object.h  tb_scroll_container.h  tb_skin.h  tb_style_edit.cpp  tb_tab_container.h  tb_toggle_container.cpp  tb_types.h  tb_value.cpp  tb_widgets.cpp  tb_widgets.h  tb_widgets_common.cpp  tb_widgets_common.h  tb_widgets_reader.h  tb_window.h
unit_tests/: CMakeLists.txt  terrain_test_1.json  terrain_test_2.json  terrain_test_3.json  terrain_test_4.json  terrain_test_5.json  terrain_test_6.json  test_core.cpp  test_terraingen.cpp
(+49 files in other folders)
